Table Alignement fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,14 +3,12 @@
 }
 
 .table {
-    width: 50%;
-    padding: 5%;
+    padding: 2%;
 }
 
 .form {
     width: 50%;
     padding: 2%;
-    display: block;
 }
 
 .error {
@@ -21,18 +19,16 @@
 input{
     padding: 1%;
 }
-
-.form select {
-    display: block;
-}
 table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    overflow-y:scroll;
-    height:80%;
-    display:block;
+    display: table;
   }
   
+  .employeeTable {
+    overflow:scroll;
+    height:300px;
+  }
  td, th {
     border: 1px solid #ddd;
     padding: 8px;
